# fastapi-starter

./: .gitignore  Dockerfile  README.md  build_docker_image.sh  local-example.env  pyproject.toml  ruff.toml
src/fastapi_starter/: __main__.py  app.py  config.py  logging.py  routes.py  utils.py
src/fastapi_starter/api/: app.py
src/fastapi_starter/db/: engine.py
tests/: conftest.py
tests/unit/: test_app.py  test_routes.py
